fix video z-index to play and added hotels style

--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -22,7 +22,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1;
+  z-index: 0;
 }
 
 .center-container {
